apps/quick-share/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quick-share
  namespace: quick-share
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - share.tmem.de
      secretName: quick-share-tls
  rules:
    - host: share.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quick-share
                port:
                  number: 8080
